# fast-zip

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: center_directory.rs  directory.rs  eocd.rs  error.rs  extra.rs  lib.rs  magic.rs  main.rs  zip.rs  zip_file.rs
src/cache/: directory_cache.rs  eo_cd_cache.rs  mod.rs  zip_cache.rs  zip_file_cache.rs
src/stream/: bytes.rs  endian.rs  len.rs  mod.rs  pin.rs  read_write.rs  stream.rs  value_read.rs
