[package]
name = "fast-zip"
version = "0.1.0"
edition = "2021"

exclude = ["example"]

[workspace]
members = ["example", "."]

[dependencies.fast-stream]
path = "/Users/lake/dounine/github/ipa/fast-stream"

[features]
default = []
all = ["fast-stream/all"]
file = ["fast-stream/file"]
enum = ["fast-stream/enum"]

[dependencies]
thiserror = "2.0"
miniz_oxide = "0.8.2"