[package]
name = "fast-zip"
version = "0.1.0"
edition = "2021"

exclude = ["example"]

[workspace]
members = ["example", "."]

[dependencies.fast-stream]
path = "../fast-stream"

[features]
default = ["crc32", "deflate"]
all = ["fast-stream/all"]
file = ["fast-stream/file"]
enum = ["fast-stream/enum"]
deflate = ["fast-stream/deflate"]
crc32 = ["fast-stream/crc32"]

[dependencies]
thiserror = "2.0"