[package]
name = "fast-zip"
version = "0.1.0"
edition = "2024"

exclude = ["example"]

[workspace]
members = ["example", "."]

[features]
default = ["fast-stream"]
all = ["fast-stream/all"]

[dependencies]
thiserror = "2.0"
indexmap = "2.10.0"
#fast-stream = { git = "https://github.com/dounine/fast-stream" }
[dependencies.fast-stream]
path = "../fast-stream"
optional = true